--- a/wwwroot/css/searchItemLayout.css
+++ b/wwwroot/css/searchItemLayout.css
@@ -1,6 +1,7 @@
 ﻿
 :root {
     --husky-yellow: #fcce01;
+    --lght-grey: #f8f8f8;
     --med-grey: #ececec;
     --drk-grey: #262626;
     --accnt-grey: #d0d0d0;
@@ -12,14 +13,20 @@
 .homeContainer {
     /*width: 100vw;*/
     height: 90vh;
+    max-height: 90vh;
     overflow-y: hidden;
+}
+
+.search-container {
+    max-height: 90vh;
 }
 
 /*Results Topper*/
 .resultsTopper {
-    min-height: 8%;
+    min-height: 7vh;
     box-shadow: var(--section-shadow);
     border-bottom: var(--section-border);
+    background-color: white;
 }
 
 .topperCol {
@@ -177,14 +184,14 @@
 
 /*Results Section*/
 .resultsContainer {
-    /*background-color: blue;*/
+    background-color: var(--lght-grey);
 }
 
 .results {
     display: flex;
     justify-content: center;
     border-bottom: var(--section-border);
-    height: 86%;
+    height: 77vh;
 }
 
 .noResults {
@@ -210,7 +217,8 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 6%;
+    background-color: white;
+    height: 6vh;
 }
 
 h1 {
